// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`test swipe component props > test swipe navigation 1`] = `
"<div class="var-swipe" style="width: 100px; height: 100px;">
  <div class="var-swipe__track var-swipe--vertical" style="height: 0px; transform: translateY(0px); transition-duration: 300ms;">
    <div class="var-swipe-item" style="height: 0px; transform: translateY(0px);">1</div>
    <div class="var-swipe-item" style="height: 0px; transform: translateY(0px);">2</div>
    <div class="var-swipe-item" style="height: 0px; transform: translateY(0px);">3</div>
  </div>
  <transition-stub name="" appear="false" persisted="false" css="true">
    <div class="var-swipe__navigation var-swipe__navigation-prev var-swipe--navigation-vertical-prev"><button class="var-button var--box var-button--normal var--inline-flex var-elevation--2 var-button--default var-swipe__navigation-prev-button" type="button" var-swipe-cover="">
        <!--v-if-->
        <div class="var-button__content"><i class="var-icon var-icon--set var-icon-chevron-up var-swipe__navigation-prev-button-icon" style="transition-duration: 0ms;" var-swipe-cover=""></i></div>
        <div class="var-hover-overlay"></div>
      </button></div>
  </transition-stub>
  <transition-stub name="" appear="false" persisted="false" css="true">
    <div class="var-swipe__navigation var-swipe__navigation-next var-swipe--navigation-vertical-next"><button class="var-button var--box var-button--normal var--inline-flex var-elevation--2 var-button--default var-swipe__navigation-next-button" type="button" var-swipe-cover="">
        <!--v-if-->
        <div class="var-button__content"><i class="var-icon var-icon--set var-icon-chevron-down var-swipe__navigation-next-button-icon" style="transition-duration: 0ms;" var-swipe-cover=""></i></div>
        <div class="var-hover-overlay"></div>
      </button></div>
  </transition-stub>
  <!--v-if-->
</div>"
`;

exports[`test swipe component props > test swipe navigation 2`] = `
"<div class="var-swipe" style="width: 100px; height: 100px;">
  <div class="var-swipe__track" style="transform: translateX(0px); transition-duration: 300ms; width: 0px;">
    <div class="var-swipe-item" style="transform: translateX(0px); width: 0px;">1</div>
    <div class="var-swipe-item" style="transform: translateX(0px); width: 0px;">2</div>
    <div class="var-swipe-item" style="transform: translateX(0px); width: 0px;">3</div>
  </div>
  <transition-stub name="" appear="false" persisted="false" css="true">
    <div class="var-swipe__navigation var-swipe__navigation-prev"><button class="var-button var--box var-button--normal var--inline-flex var-elevation--2 var-button--default var-swipe__navigation-prev-button" type="button" var-swipe-cover="">
        <!--v-if-->
        <div class="var-button__content"><i class="var-icon var-icon--set var-icon-chevron-left var-swipe__navigation-prev-button-icon" style="transition-duration: 0ms;" var-swipe-cover=""></i></div>
        <div class="var-hover-overlay"></div>
      </button></div>
  </transition-stub>
  <transition-stub name="" appear="false" persisted="false" css="true">
    <div class="var-swipe__navigation var-swipe__navigation-next"><button class="var-button var--box var-button--normal var--inline-flex var-elevation--2 var-button--default var-swipe__navigation-next-button" type="button" var-swipe-cover="">
        <!--v-if-->
        <div class="var-button__content"><i class="var-icon var-icon--set var-icon-chevron-right var-swipe__navigation-next-button-icon" style="transition-duration: 0ms;" var-swipe-cover=""></i></div>
        <div class="var-hover-overlay"></div>
      </button></div>
  </transition-stub>
  <!--v-if-->
</div>"
`;

exports[`test swipe component props > test swipe navigation 3`] = `
"<div class="var-swipe" style="width: 100px; height: 100px;">
  <div class="var-swipe__track" style="transform: translateX(0px); transition-duration: 300ms; width: 0px;">
    <div class="var-swipe-item" style="transform: translateX(0px); width: 0px;">1</div>
    <div class="var-swipe-item" style="transform: translateX(0px); width: 0px;">2</div>
    <div class="var-swipe-item" style="transform: translateX(0px); width: 0px;">3</div>
  </div>
  <!--v-if-->
  <!--v-if-->
  <div class="var-swipe__indicators">
    <div class="var-swipe__indicator var-swipe--indicator-active"></div>
    <div class="var-swipe__indicator"></div>
    <div class="var-swipe__indicator"></div>
  </div>
</div>"
`;

exports[`test swipe component props > test swipe navigation 4`] = `
"<div class="var-swipe" style="width: 100px; height: 100px;">
  <div class="var-swipe__track" style="transform: translateX(0px); transition-duration: 300ms; width: 0px;">
    <div class="var-swipe-item" style="transform: translateX(0px); width: 0px;">1</div>
    <div class="var-swipe-item" style="transform: translateX(0px); width: 0px;">2</div>
    <div class="var-swipe-item" style="transform: translateX(0px); width: 0px;">3</div>
  </div>
  <transition-stub name="var-swipe--navigation-prev-animation" appear="false" persisted="false" css="true">
    <div class="var-swipe__navigation var-swipe__navigation-prev"><button class="var-button var--box var-button--normal var--inline-flex var-elevation--2 var-button--default var-swipe__navigation-prev-button" type="button" var-swipe-cover="">
        <!--v-if-->
        <div class="var-button__content"><i class="var-icon var-icon--set var-icon-chevron-left var-swipe__navigation-prev-button-icon" style="transition-duration: 0ms;" var-swipe-cover=""></i></div>
        <div class="var-hover-overlay"></div>
      </button></div>
  </transition-stub>
  <transition-stub name="var-swipe--navigation-next-animation" appear="false" persisted="false" css="true">
    <div class="var-swipe__navigation var-swipe__navigation-next"><button class="var-button var--box var-button--normal var--inline-flex var-elevation--2 var-button--default var-swipe__navigation-next-button" type="button" var-swipe-cover="">
        <!--v-if-->
        <div class="var-button__content"><i class="var-icon var-icon--set var-icon-chevron-right var-swipe__navigation-next-button-icon" style="transition-duration: 0ms;" var-swipe-cover=""></i></div>
        <div class="var-hover-overlay"></div>
      </button></div>
  </transition-stub>
  <div class="var-swipe__indicators">
    <div class="var-swipe__indicator var-swipe--indicator-active"></div>
    <div class="var-swipe__indicator"></div>
    <div class="var-swipe__indicator"></div>
  </div>
</div>"
`;

exports[`test swipe component props > test swipe navigation 5`] = `
"<div class="var-swipe" style="width: 100px; height: 100px;">
  <div class="var-swipe__track" style="transform: translateX(0px); transition-duration: 300ms; width: 0px;">
    <div class="var-swipe-item" style="transform: translateX(0px); width: 0px;">1</div>
    <div class="var-swipe-item" style="transform: translateX(0px); width: 0px;">2</div>
    <div class="var-swipe-item" style="transform: translateX(0px); width: 0px;">3</div>
  </div>
  <transition-stub name="var-swipe--navigation-prev-animation" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
  <transition-stub name="var-swipe--navigation-next-animation" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
  <div class="var-swipe__indicators">
    <div class="var-swipe__indicator var-swipe--indicator-active"></div>
    <div class="var-swipe__indicator"></div>
    <div class="var-swipe__indicator"></div>
  </div>
</div>"
`;
